--- a/main.html
+++ b/main.html
@@ -6,21 +6,21 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 	<style>
-		#yellow{
-			background-color= yellow;
-			border-width= 1px;
-			border-color= green;
+		#yellow {
+			background-color: yellow;
+			border-width: 1px;
+			border-color: green;
 			
 		}
-		#red{
-			background-color= red;
-			border-width= 1px;
-			border-color= black;
+		#red {
+			background-color: red;
+			border-width: 1px;
+			border-color: black;
 		}
-		#green{
-			background-color= green;
-			border-width= 1px;
-			border-color= yellow
+		#green {
+			background-color: green;
+			border-width: 1px;
+			border-color: yellow
 		}
 	</style>
 
