--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
 		#green {
 			background-color: green;
 			border-width: 1px;
-			border-color: yellow
+			border-color: yellow;
 		}
 	</style>
 
